--- a/content/til/2020-02-26-TIL .md
+++ b/content/til/2020-02-26-TIL .md
@@ -13,13 +13,13 @@ description: ''
 - SearchPage 작성중(현제까지 한것- 페이지에 모든 포스팅들 나오게끔 만듦. css로 타일 형태로 나오게끔 만듦.)
 - 링크 에러 수정
 - post마다 태그 추가함.
-- 이미지 추가하는 거 https://www.youtube.com/watch?v=b6Oe2puTdMQ 참고 해서 작동 잘 되는 거 확인함.
+- 이미지 추가하는 거 https://www.youtube.com/watch?v=b6Oe2puTdMQ 따라 해서 작동 잘 되는 거 확인함.
 
 해야 할것
 
 - SearchPage - 페이지 처음 진입 시 포스팅들 숫자 제한하던가 나눠서 가져오게끔 하는 것. 태그 검색창을 만들어서 태그를 검색해서 그 태그의 포스팅만 나오게끔 만들어야 한다.  
 - 포스트 추가할 때 태그 입력하는 것과 이미지 추가하는 것을 만들어야 한다.  
-- 이미지 추가하는 거 https://www.youtube.com/watch?v=b6Oe2puTdMQ 따라 다시 작성해야 함.
+- 이미지 추가하는 거 https://www.youtube.com/watch?v=b6Oe2puTdMQ 참고 해서 다시 작성해야 함.
 
 ## Feelings
 
