--- a/content/study/2019-12-22-study.md
+++ b/content/study/2019-12-22-study.md
@@ -1,7 +1,7 @@
 ---
 title: "'웹을 지탱하는 기술' 1회차 스터디"
 date: "2019-12-12"
-template: "study"
+template: "post"
 draft: false
 tags:
   - "Web Technology"
