--- a/content/til/2020-03-03-TIL.md
+++ b/content/til/2020-03-03-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: "20-03-03"
+title: "2020-03-03-TIL"
 description: ''
 template: "post"
-date: "20-03-03"
+date: "2020-03-03"
 ---
 
 
