--- a/content/til/2020-03-03-TIL.md
+++ b/content/til/2020-03-03-TIL.md
@@ -6,7 +6,13 @@ template: "post"
 date: "2020-03-03"
 ---
 
+<!-- sudo docker run -d -p 27017:27017 -v ~/data:/data/db mongo
 
+history.
+
+docker inspect 02b
+
+"Source": "/var/lib/docker/volumes/95b7aa17490739debddbac19aee7e829913517a597f691b756185233e323a8e8/_data", -->
 ## Facts
 
 프로젝트
