--- a/content/til/2020-02-27-TIL.md
+++ b/content/til/2020-02-27-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: "20-02-27"
+title: "2020-02-27"
 description: ''
-template: "post"
-date: "20-02-27"
+template: "til"
+date: "2020-02-27"
 ---
 
 ## Facts
