--- a/content/til/2020-02-28-TIL.md
+++ b/content/til/2020-02-28-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: "20-02-28"
+title: "2020-02-28"
 description: ''
-template: "post"
-date: "20-02-28"
+template: "til"
+date: "2020-02-28"
 ---
 
 ## Facts
