--- a/content/til/2019-11-25-TIL.md
+++ b/content/til/2019-11-25-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: "19-11-25"
+title: "2019-11-25"
 category: TIL
 description: ''
-template: "post"
+template: "til"
 ---
 
 오늘은 주로 javascript를 이용해서 To do List 를 만들려고 했습니다. 
