--- a/content/til/2020-02-19-TIL.md
+++ b/content/til/2020-02-19-TIL.md
@@ -1,8 +1,8 @@
 ---
 layout: TIL
-title: "20-02-19"
-template: "post"
-date: "20-02-19"
+title: "2020-02-19"
+template: "til"
+date: "2020-02-19"
 description: ''
 ---
 
