--- a/content/til/2020-02-24-TIL .md
+++ b/content/til/2020-02-24-TIL .md
@@ -1,8 +1,8 @@
 ---
 layout: TIL
-title: "20-02-24"
-template: "post"
-date: "20-02-24"
+title: "2020-02-24"
+template: "til"
+date: "2020-02-24"
 description: ''
 ---
 
