--- a/content/til/2020-02-26-TIL .md
+++ b/content/til/2020-02-26-TIL .md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: "20-02-26"
+title: "2020-02-26"
 description: ''
-template: "post"
-date: "20-02-26"
+template: "til"
+date: "2020-02-26"
 ---
 
 ## Facts
