--- a/content/til/2020-03-02-TIL.md
+++ b/content/til/2020-03-02-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: "20-03-02"
+title: "2020-03-02"
 description: ''
-template: "post"
-date: "20-03-02"
+template: "til"
+date: "2020-03-02"
 ---
 
 
