--- a/content/til/2020-03-03-TIL.md
+++ b/content/til/2020-03-03-TIL.md
@@ -1,8 +1,8 @@
 ---
 layout: TIL
-title: "2020-03-03-TIL"
+title: "202020-03-03-TIL"
 description: ''
-template: "post"
+template: "til"
 date: "2020-03-03"
 ---
 
