--- a/content/til/2020-03-06-TIL.md
+++ b/content/til/2020-03-06-TIL.md
@@ -2,8 +2,9 @@
 layout: TIL
 title: "2020-03-06-TIL"
 description: ''
-template: "post"
+template: "til"
 date: "2020-03-06"
+rss: "feed"
 ---
 
 ## Facts
