--- a/content/til/2020-03-10-TIL.md
+++ b/content/til/2020-03-10-TIL.md
@@ -1,9 +1,9 @@
 ---
 layout: TIL
-title: &quot;2020-03-10-TIL&quot;
+title: "2020-03-10-TIL"
 description: ''
-template: &quot;til&quot;
-date: &quot;2020-03-10&quot;
+template: "til"
+date: "2020-03-10"
 ---
 
 ## Facts
