--- a/content/til/2020-04-14-TIL.md
+++ b/content/til/2020-04-14-TIL.md
@@ -24,6 +24,20 @@ description: ''
 
 - test 할 때 router나 뭐 컴포넌트로 감싸면 원하는 props를 test 하기 위해서. children.props를 넣어 줘야 한다. 밑에처럼 두 번 감싸면 wrapper.props().children.props.children.props. 변수라고 써야 한다.
 
+```javascript
+        <Router
+          initialEntries={[{ pathname: '/gibong@gmail.com', key: 'testKey' }]}
+        >
+          <Route exact path="/:user">
+            <Component
+            />
+          </Route>
+        </Router>
+```
+
+라고 작성을 하면 된다. pathname 안에 원하는 params를 넣고(Link랑 비슷하게) Route에 본 코드에 있는 Route와 비슷하게 짜면 된다.
+
+
 ## Future Action
 
 - 못 풀면 빨리 풀이를 보도록 하자.
