add what i learned today

--- a/content/til/2020-04-27-TIL.md
+++ b/content/til/2020-04-27-TIL.md
@@ -8,18 +8,18 @@ description: ''
 
 ## Facts
 
-- 
+- data structure 중 hash table 와 set를 만들었다.
 
 ## Feelings
 
-- 
+- 힘든 하루였다.
 
 ## Findings
 
-- 
+- hash table 은 보통 배열과 list나 또 다른 배열을 조합해서 쓴다. 배열 쓰는 이유는 빠른 참조를 하기 위해서 쓰는 거고 list나 또 다른 배열을 쓰는 이유는 충돌을 방지하기 위해서 쓰는 것이다. 충돌 방지 위해서 제일 많이 쓰는 게 chaining이다. chaining은 배열과 linkedlist를 조합해서 만드는 것이다. 배열로 index를 참조해서 그 참조한 곳에 만들어진 linkedlist에 노드를 생성 삭제 업데이트 등 을 한다. 배열의 index는 hash function으로 index를 구한다. hash function은 특정한 계산을 통해서 얻는다.
 
 ## Future Action
 
-- 
+- 뭔가 배운 내용중 조금씩 까먹고 있다. 바로바로 노트를 하도록 하자.
 
 ## Feedback
