Add what I learned today

--- a/content/til/2020-05-06-TIL.md
+++ b/content/til/2020-05-06-TIL.md
@@ -7,20 +7,20 @@ description: ''
 ---
 
 
-## Facts
+## Fact
 
-- 프로그래머스에서 스택/큐 모든 문제를 풀었다. 트럭문제는 못풀었다.정렬 문제에서 hindex와 가장큰수 그리고 해시에서 위장을 풀었다.
+- 오늘은 프로그래머스에서 많은 문제를 풀었다. 이렇게 많이 푼 이유는 이번 주 주말에 있을 카카오톡과 우아한 형제들의 코딩 테스트를 준비하기 위해서다.
 
-## Feelings
+## Feeling
 
-- 어 너무 어렵다 ㅠㅠ
+- 알고리즘 문제를 풀면서 느낀 점은 풀릴 때는 정말 매끄럽게 풀리는데 안 풀릴 때는 정말 안 풀렸다
 
-## Findings
+## Finding
 
-- 문제를 못 풀면 그냥 답안지 보는게 시간이 아끼는것이다.
+- 알고리즘 문제를 풀 때 이해 한 것들과 그 문제를 어떻게 풀지 기록을 하고 문제를 풀기 시작한다. 여기서 조심해야 할 것은 문제를 잘못 이해하면 시간만 낭비되고 풀지도 못한다.
 
-## Future Action
+## Future action
 
-- 30분 이내 못 풀면 그냥 답안지 보자.
+- 알고리즘 문제를 풀 때 주어진 문제에 대한 이해를 완벽하게 한 다음에 계획을 세우고 풀기 시작하자. 그리고 30분 안에 못 풀면 그 이후 시간 투자 하는 것은 시간 낭비이므로 답지를 보도록 하자.
 
 ## Feedback
