add what I learned today

--- a/content/til/2020-05-14-TIL.md
+++ b/content/til/2020-05-14-TIL.md
@@ -9,20 +9,26 @@ description: ''
 
 ## Fact
 
-- 
+- 오늘 아침에 짝 프로그래밍을 했다. 프로그래머스에 있는 직사각형의 개수 구하기 문제를 풀려고 하였으나 시간이 너무 걸려서 결국엔 해답을 보게 되었다. 해답을 보니 이것은 수학 공식으로 풀면 된다는 것을 알게 되었다.
+- 오늘은 우아한 캠퍼스 2차를 준비하는 과정을 위해서 순수 JavaScript로 react-redux를 작성을 하는 것을 봤다. functional 하게 만드는 게 아니라 class로 만들어서 작성을 했고, store에 state를 작성을 해서 거기서 state를 저장하고 쓰는 구조였다.
+- 자동 배포를 하기 위해서 aws CodeDeploy를 쓰기로 결심을 했다. 물론 다른 쉬운 방법은 많았지만 공부하는 차원으로 이것을 쓰기로 했다.
 
 ## Feeling
 
-- 
+- 수학공식으로만 풀 수 있는 것을 보고 그냥 너무 허무했다. 그리고 수학을 공부할 필요성을 느끼긴 했지만 과연 개발 공부하는 것도 벅찬데 수학 공부할 시간이 있을까?
+- 순수 JavaScript로 React를 작성을 하는 것을 보고 예전에 어떻게 순수하게 Javascript로만 작성을 했는지 모르겠다고 느꼈다. 왜냐하면 지금 보니 순수하게 JavaScript만 써서 작성하는 게 그만큼 엄청 어렵게 느껴졌다.
+- 서버 자동 배포를 하기 3일 차이다. 정말 배포는 너무 어려운 것 같다. 뭐 어디에 시원하게 뻥 뚫어주는 것도 없고 공식 문서는 정말 길고 1~10까지 안 알려주고 중간중간 뛰어넘는 1 2 3 4 8 10 같은 구멍이 있는 일련과정을 알려줘서 너무 헷갈린다.
 
 ## Finding
 
-- CodeDeploy는 서버를 배포 해주는 역할을 하지만 여기서 codedeploy 장점중 하나는 배포 자동화이다. 배포 자동화를 하기 위해서 Code Deploy Agent를 설치를 해야 한다. Code Deploy Agent는 Code Deploy의 config 파일 같은것 이므로 config파일 안의 일련의 명령어들을 실행을 한다. 
+- 가로 w 세로 h 최대공약수 gcd를 써서 w*h - (w + h - gcd(w, h) 이란 공식으로 종이 반을 접었을 때 선이 지나는 사각형 개수를 구할 수 있다.
 - ![](static/sds_architecture.png)
-
+- CodeDeploy 워크 플로는 이러하다. 로컬에 배포할만한 것을 만든다. 만든 것 안에 AppSpec을 해서 CodeDeploy가 어떤 action을 취할지 정한다. 그 후에 배포할 것을 appspec과 함께 번들링을 해서 s3나 github에 올린다. 이 파일을 application revision이라고 한다. application revision을 설정 한 곳에 push를 하게 되면 (code deploy에 설정한 deployment group) 이 bundle 이 target revision 이 된다. 그 후에 CodeDeploy agent 가 무엇과 언제 target revision을 당겨 올지 판단한다. 당겨 온 후에 AppSpec file에 따라 instance에 deploy를 한다.
 
 ## Future action
 
-- 
+- 수학 공부할 기회가 있다면 공부해 보는 것도 나쁘지 않다고 생각된다. 그러나 지금 할게 많으니 priority를 제일 낮게 잡자.
+- 순수 JavaScript 작성법을 다 잊은 것 같으니 나중에 한번 날 잡아서 해보는 것도 나쁘지 않다고 생각한다. 그러나 이것 또한 다른 것 할게 많으니 priority를 조금 낮게 잡자.
+- CodeDeploy를 0 이용하여 dockerhub에 있는 image를 ec2에 자동 배포를 하려고 했는 데 너무 오래 걸린다면 조금 다시 생각해보고 몇몇 단계를 생략해 보는 것도 나쁘지 않다고 생각된다.
 
 ## Feedback
