--- a/content/til/2020-05-13-TIL.md
+++ b/content/til/2020-05-13-TIL.md
@@ -14,13 +14,15 @@ description: ''
 
 ## Feeling
 
-- CI/CD 를 써서 자동적으로 배포를 하는것도 좋은데, 이 사이클을 만들기 위해서 너무 시간이 많이 든다고 느끼고 너무 힘들다. 왜 힘드냐면 정보들이 포인트 투 포인트 형식으로 되있는게 아니고 중간중간 연결 작업에서 있어야 할 정보들이 너무 없어서 시행착오로만 격을 수 있어서 그렇게 느꼈다.
+- 운영 비용 절감을 위한 CI/CD 구축은 시간도 많이 걸리고 과정이 너무 힘들었다. 왜냐하면 정보들이 일목요연하게 나와있지 않고 요소들의 연결 과정에 필요한 정확한 정보들이 없었기 때문이다. 오직 시행착오를 겪어가며 삽질로만 해결할 수 있었다.
+<!-- - CI/CD 를 써서 자동적으로 배포를 하는것도 좋은데, 이 사이클을 만들기 위해서 너무 시간이 많이 든다고 느끼고 너무 힘들다. 왜 힘드냐면 정보들이 포인트 투 포인트 형식으로 되있는게 아니고 중간중간 연결 작업에서 있어야 할 정보들이 너무 없어서 시행착오로만 격을 수 있어서 그렇게 느꼈다. -->
 
 ## Finding
 
 - git rm -rf --cached (/파일) 하면 git에서 tracked 된 모든 cache을 지운다. 혹시나 gitignore 하기 전에 git add .로 추적을 했었다면 위의 명령어로 추적하던 cache를 remove 함으로써 다시 gitignore에 넣어서 git에 안 들어 가게끔 설정을 할 수 있다.  
 - CI/CD(Continuous Integration/Continuous Deployment).  
-- 연속 통합(CI)은 개발자가 하루에도 여러 차례 코드를 공유 저장소에 통합해야 하는 개발 관행이다. 그런 다음 각 체크인을 자동 빌드로 확인하여 팀이 문제를 조기에 탐지할 수 있도록 한다. 정기적으로 통합하면 오류를 빠르게 감지하고 더 쉽게 찾을 수 있다. CI는 한국어로 지속적인 통합을 의미한다. 우리가 로컬에서 코드를 작성하고 GitHub 같은 팀 프로젝트 repository에 올릴 시에 이때 설정에 따라(테스트를 넣었을 시 테스트 통과를 할 때만 계속 진행된다) GitHub repository에 있는 코드랑 통합이 된다. 통합이 될 때 코드를 자동 빌드로 확인하여 코드에 문제를 조기에 탐지할 수 있도록 한다. 이것으로 통합하면 오류를 빠르게 감지하고 더 쉽게 찾을 수 있다.  
+- 지속적인 통합(CI)은 개발자가 하루에도 여러 차례 코드를 공유 저장소에 통합해야 하는 개발 관행이다. 그런 다음 각 체크인을 자동 빌드로 확인하여 팀이 문제를 조기에 탐지할 수 있도록 한다. 정기적으로 통합하면 오류를 빠르게 감지하고 더 쉽게 찾을 수 있다. CI는 한국어로 지속적인 통합을 의미한다. 우리가 로컬에서 코드를 작성하고 GitHub 같은 팀 프로젝트 repository에 올릴 시에 이때 설정에 따라(테스트를 넣었을 시 테스트 통과를 할 때만 계속 진행된다) GitHub repository에 있는 코드랑 통합이 된다. 통합이 될 때 자동 빌드를 통해 코드의 문제를 조기 탐지할 수 있다. 이를 통해 오류를 빠르게 감지하고 더 쉽게 찾을 수 있다.
+<!-- 통합이 될 때 코드를 자동 빌드로 확인하여 코드에 문제를 조기에 탐지할 수 있도록 한다. 이것으로 통합하면 오류를 빠르게 감지하고 더 쉽게 찾을 수 있다.   -->
 - CD는 한국어로 지속적인 배포다. CI 과정을 거쳐서 GitHub에 올라온 코드 들을 바로 자동적으로 서버에 코드가 옮겨지면서 배포가 된다. CD는 새로운 기능, 구성 변경, 버그 수정 및 실험 등 모든 유형의 변화를 production 또는 사용자의 손에 지속적으로 안전하고 신속하게 전달할 수 있는 기능이다.  
 - ![](static/CI_CD.jpg)
 
