--- a/content/til/2020-05-14-TIL.md
+++ b/content/til/2020-05-14-TIL.md
@@ -16,7 +16,8 @@ description: ''
 ## Feeling
 
 - 수학공식으로만 풀 수 있는 것을 보고 그냥 너무 허무했다. 그리고 수학을 공부할 필요성을 느끼긴 했지만 과연 개발 공부하는 것도 벅찬데 수학 공부할 시간이 있을까?
-- 순수 JavaScript로 React를 작성을 하는 것을 보고 예전에 어떻게 순수하게 Javascript로만 작성을 했는지 모르겠다고 느꼈다. 왜냐하면 지금 보니 순수하게 JavaScript만 써서 작성하는 게 그만큼 엄청 어렵게 느껴졌다.
+- 순수 JavaScript로 React와 비슷하게 구현하는 것을 보고 예전엔 어떻게 JavaScript로만 개발했는지 궁금했다. 왜냐하면 순수하게 JavaScript만으로 구현하는 게 엄청 어렵고 복잡했기 때문이다.
+<!-- - 순수 JavaScript로 React를 작성을 하는 것을 보고 예전에 어떻게 순수하게 Javascript로만 작성을 했는지 모르겠다고 느꼈다. 왜냐하면 지금 보니 순수하게 JavaScript만 써서 작성하는 게 그만큼 엄청 어렵게 느껴졌다. -->
 - 서버 자동 배포를 하기 3일 차이다. 정말 배포는 너무 어려운 것 같다. 뭐 어디에 시원하게 뻥 뚫어주는 것도 없고 공식 문서는 정말 길고 1~10까지 안 알려주고 중간중간 뛰어넘는 1 2 3 4 8 10 같은 구멍이 있는 일련과정을 알려줘서 너무 헷갈린다.
 
 ## Finding
