안녕하세요

--- a/content/til/2020-05-29-TIL.md
+++ b/content/til/2020-05-29-TIL.md
@@ -30,9 +30,10 @@ result.stream() //ArrayList stream으로 변환
 ```
 
 ```java
-List<Integer> result = new ArrayList<>(Arrays.asList(new Int[]{1, 2}));
+// List<Integer> result = new ArrayList<>(Arrays.asList(new Integer[]{1, 2}));
+List<Integer> result = Arrays.asList(new Integer[]{1, 2});
 
-listInt.stream().mapToInt(Integer::intValue).toArray() // Integer ArrayList -> int Array
+result.stream().mapToInt(Integer::intValue).toArray() // Integer ArrayList -> int Array
 
 List<String> listString = new ArrayList<>(Arrays.asList(new String[]{"a","b"}));// StringArray list  들어 가있는 a,b 선언
 
@@ -43,7 +44,7 @@ listString.stream().toArray(); // array 로 변환.
 ```java
 int[] arrayInt = {1,2,3};
 Stream.of(arrayInt) // int Array -> stream
-
+`
 ```
 
 ## Future Action
