--- a/content/til/2020-06-01-TIL.md
+++ b/content/til/2020-06-01-TIL.md
@@ -33,9 +33,9 @@ description: ''
 
 ``` java
 
-String asd = "asdasd" // 스트링 선언
-StringBuilder shit = new StringBuilder(asd).reverse // 스트링 빌더 사용과ㅗ 리버스 쓰기.
-return output.toString() // 스트링 빌더에서 스트링으로 반환
+String randomString = "asdasd" // 스트링 선언
+StringBuilder builtString = new StringBuilder(randomString).reverse() // 스트링 빌더 사용과 리버스 쓰기.
+return shbuiltStringit.toString() // 스트링 빌더에서 스트링으로 반환
 ```
 
 <https://www.baeldung.com/java-reverse-string>
