--- a/content/til/2020-06-04-TIL.md
+++ b/content/til/2020-06-04-TIL.md
@@ -28,4 +28,5 @@ description: ''
 
 ## Future Action
 
-- 
+- 짝 프로그래밍을 자주 안 했더니 소통의 방법을 잊어버렸다. 다음에는 소통의 능력을 더 키우기 위해서 짝 프로그래밍을 자주 해야 할 것 같다.
+- 책에 많은 유익한 정보가 많다고 느껴진다. 책을 자주 읽도록 하자.
