--- a/content/til/2020-05-26-TIL .md
+++ b/content/til/2020-05-26-TIL .md
@@ -8,24 +8,53 @@ description: ''
 
 ## Fact
 
-- 오늘은 프로그래머스에 있는 알고리즘 문제를 풀지 않고 combination을 어떻게 짜는지 공부를 했다. combination을 어떻게 짜는지 보기 위해서 인터넷에 조사를 해봤다. 제대로 된 코드를 판별하기 위해서 토요일에 짜다 만 코드에 이 combination을 적용해서 통과를 시켜서 확인을 했다. 확인한 후에 이 코드를 공부를 했다. 공부를 하기 위해서 코드를 분해했다. 분해는 직접 로직에 입력값이 뭐가 들어가는지 콘솔에 찍어보고 출력이 어떻게 나오는지도 보고 중간에 콘솔을 찍어 보기도 했다. 찍어 보는 것만으로도 부족해서 결국엔 수기로 한 변 테이블을 그려 보면서 하니 이해가 잘 갔다.
-- combination을 공부 한 후에 어제 짜다 만 enum으로 case 비슷한 controller을 짜 보려고 했다. 그러나 enum으로 controller 짜는 것 자체가 조금 이상한 것 같아서 그만뒀다. 그 후에 코어 자바 책에서 준 예제 코드를 ch3부터 쳐보고 수정해보면서 공부를 했다. 수정할 때 코드를 지워 보던가 추가적으로 작성을 더해 갔다. 이렇게 함으로 써 뭘 넣을 수 있고 변화를 주면서 어떻게 결괏값이 달라지는지 공부를 했다.
+- 오늘 아침에 combination 어떻게 짜는지 공부를 했다. 인터넷에 나와있는 풀이법을 보고, 적용해보고, 분해해보면서 공부를 했다. 적용은 저번 주 토요일에 vscode에서 마저 못 풀었던 문제의 풀이에 적용을 해서 돌려봤다. 돌려보니 원하는 값을 얻어서 그때부터 분해를 했다. 분해를 하기 위해서 종이에 하나씩 어떻게 돌아가는지 적었다. 풀이법에서 이진수를 써서 콤비네이션을 썼는데 이 이진수와 인덱스를 섞어서 알맞은 것을 배열에 담아서 리턴을 해줬다. 정확하게 말해서 배열에 값들이 있으면 그 배열들의 모든 경우의 수의 합들을 구하기 위해서 2^(배열의 길이) 만큼 for을 돌려서 그 돌리는 걸 이진수로 만들고 이 이진수를 배열을 다시 loop을 돌려서 이진수를 배열의 index 만큼 오른쪽으로 이동을 하면서 일의 자리수의 이진수가 1이 맞는다면 이진수 값을 십진수로 바꿔서 저장하는 방식으로 구하는 것이다. 그리고 그 저장한 것을 합해서 새로운 배열에 저장한다. 나중에 최종적으로 모든 합 합을 이 새로운 배열에 저장한 것을 돌려준다.
+- combination 공부 후에 다시 코어 자바 9의 책을 보면서 코드를 수정하면서 공부를 했다. enum을 case 모처럼 적용을 해보려고 했는데 이상해서 중간에 그만뒀다. 그 후에 클래스 로더랑 proxy 등을 보고 다시 3장부터 주어진 코드를 쳐보고 수정하면서 공부를 했다.
 
 ## Feeling
 
-- combination 짜는 방법을 생각한 사람은 정말 천재인 것 같다. 어떻게 이렇게 짤 생각을 했는지 감탄이 절로 나온다. 역시 나는 굼벵이 수준이란 것을 또다시 깨닫게 됐다.
-- enum으로 controller을 살려고 했을 때 역시 아닌 것 같아서 안 짰는데 다행히 안 짜는 게 맞는다는 것을 느꼈다. 정말 쓸 때 없이 시간 낭비할 뻔했다. enum 이놈!
+- 2진수를 써서 combination을 구현하는 것을 보고 어떻게 생각을 해냈는지 정말 신기했다. 역시 난놈들이 참 많다고 생각이 든다.
+- enum으로 case 같은 것을 짜보려고 했지만 이상한 느낌이 들어서 중간에 그만두었다. 이렇게 짤 수는 있지만 굳이 짤 필요가 없었다. 시간 낭비 안 해서 다행이다. enum 이놈!
 
 ## Findings
 
-- 배열 요소들의 combination을 구하기 위해서 2진수를 쓰게 된다. 2 진수로 배열들의 index를 표현하고 0 일 때는 안 넣고 1일 때는 안 넣는 구조로 구한다. 예를 들어서 배열에 [1,3,9]가 있으면 2^배열의 길이만큼 2진수를 만들어서 001~111로 모든 경우의 수를 만들 수 있다. 이 2^배열의 길이만큼 for loop를 돌려서 시작을 i라고 할 때 i를 2진수로 만들어서 2진수로 변환할 시에 1에 매칭된 숫자를 새로운 배열에 넣어서 나중에 합해서 또다시 새로운 배열에 넣는 구조다. 예를 들어서 for loop를 돌면서 i = 5 면 5를 2진수로 바꿀 시에 101 이 되는데 이때 일의 자리수의 1은 배열의 1을 가리키고 십의 자리수는 3을 가리키고 백의 자리수 1은 9를 가리킨다. 그래서 이진수에서 1일 시에만 새로운 배열에 저장한다. 101일 시에는 [1,9] 가 들어가서 이 배열들을 합인 10을 새로운 배열에 저장한다. 이렇게 반복해서 모든 combination 을 구한다.
-- 프락시는 보통 service를 액세스 하기 전이나 한 후에 무엇인가 실행하고 싶을 때 적용하는 것이다. 프락시를 적용하는 이유가 많지만 그중 하나가 원할 때 서비스를 불러오는 기능이다. 이로써 필요 없을 때 리소스를 로드 하지 않고 필요할 때 씀으로써 메모리 등 더욱 효율적으로 쓸 수 있다. class loader 등 보통 loader로 이러한 기능을 구현한다. 다른 이유 중 하나는 이 서비스에 대한 권한 접근을 제한 및 차단을 시켜서 특정 사용자나 조건을 만족시킬 시에만 쓸 수 있게 만들 수 있다. 또 다른 이유가 로킹도 할 수 있다. 그리고 request의 result를 캐싱을 해서 같은 request를 캐싱 된 곳에서 result를 뽑아서 줄 수 있다. 
+- controller에서 ui와 domain을 연결을 시켜주는데 이때 ui와 domain이 정확하게 무엇을 하는지의 메서드를 표시해 주는 게 아니라 controller이 메시지를 보내는 것이다. 그리고 결과도 그냥 메시지로 받아서 그 메시지로 받아서 다른 곳에 다시 뿌리는 역할을 하는 것이다. 정수 배열은 [I String 배열은 [L , 이중 혹은 이상은 [ 가 앞에 더 찍힌다.
+- 배열을 콘솔로 찍어 보고 싶을 때는 toStrings를 쓰고 이중 혹은 그 이상의 배열을 콘솔로 찍어 보고 싶을 때는 deepToStrings를 쓰면 된다
+- proxy는 실제 서비스를 사용해서 그 위에서 새로운 성격을 추가한다. 이것으로 사용자가 원하는 성격을 띤 인터페이스가 같은 서비스를 쓸 수 있다. 예를 들어서 서비스를 실행하기 전/후에 실행해야 할 코드가 있을 시에 서비스를 실행하기 전에 프락시의 코드를 거쳐서 가게끔 만든다. proxy를 쓰는 이유가 꾀 된다. 하나는 lazy installation이라고 무거운 서비스를 당장 필요 없을 시에 나중에 필요할 때 실행한다. 하나는 access control이다. 특정 유저만 이 서비스를 사용할 수 있게끔 만들 수 있다. 하나는 request에 대한 logging을 하고 싶을 때 proxy를 써서 서버를 감싸서 거기에 데가 logging 구현을 하면 된다. 그리고 caching request result도 있다. request에 대한 result를 caching을 해서 사용자가 같은 request를 하면 cache에 저장된 result를 주는 기능을 구현하기도 한다. 
 
 ## Future action
 
-- 다른 사람들이 combination을 짜는 것을 보고 역시 수학의 필요성을 느꼈다. 언젠간 수학 공부를 하자.
-- 오늘 생각 없이 enum으로 controller을 만들려고 했다. 다행히 이상한 느낌이 들어서 작성을 안 했다. 다음부터 이게 꼭 필요한지 생각을 하고 작성을 해보도록 하자. 물론 그냥 연습을 하기 위해서 구현하는 것이면 상관이 없지만.
-- TIL을 쓰고 저장했는지 확인을 하고 푸시 하자. 오늘 확인을 안 하고 푸시를 해서 결국에 다시 쓰게 됐다. 이러함으로써 시간 낭비가 엄청 난다. 그리고 퀄리티도 떨어진다.
+- 이진수로 combination을 짜는 것을 보고 놀랐다. 역시 수학의 중요성을 느꼈는데 정말 시간이 나면 수학 공부 좀 해봐야겠다.
+- 오늘 프로젝트의 피드백을 받아 봤는데 역시 피드백을 받으니깐 문제들이 속속히 보였다. 다음에도 피드백을 자주 받도록 하자.
 
+## Feedback
+---
+layout: TIL
+title: "2020-05-26-TIL"
+template: "til"
+date: "2020-05-26"
+description: ''
+---
+
+## Fact
+
+- 오늘 아침에 combination 어떻게 짜는지 공부를 했다. 인터넷에 나와있는 풀이법을 보고, 적용해보고, 분해해보면서 공부를 했다. 적용은 저번 주 토요일에 vscode에서 마저 못 풀었던 문제의 풀이에 적용을 해서 돌려봤다. 돌려보니 원하는 값을 얻어서 그때부터 분해를 했다. 분해를 하기 위해서 종이에 하나씩 어떻게 돌아가는지 적었다. 풀이법에서 이진수를 써서 콤비네이션을 썼는데 이 이진수와 인덱스를 섞어서 알맞은 것을 배열에 담아서 리턴을 해줬다. 정확하게 말해서 배열에 값들이 있으면 그 배열들의 모든 경우의 수의 합들을 구하기 위해서 2^(배열의 길이) 만큼 for을 돌려서 그 돌리는 걸 이진수로 만들고 이 이진수를 배열을 다시 loop을 돌려서 이진수를 배열의 index 만큼 오른쪽으로 이동을 하면서 일의 자리수의 이진수가 1이 맞는다면 이진수 값을 십진수로 바꿔서 저장하는 방식으로 구하는 것이다. 그리고 그 저장한 것을 합해서 새로운 배열에 저장한다. 나중에 최종적으로 모든 합 합을 이 새로운 배열에 저장한 것을 돌려준다.
+- combination 공부 후에 다시 코어 자바 9의 책을 보면서 코드를 수정하면서 공부를 했다. enum을 case 모처럼 적용을 해보려고 했는데 이상해서 중간에 그만뒀다. 그 후에 클래스 로더랑 proxy 등을 보고 다시 3장부터 주어진 코드를 쳐보고 수정하면서 공부를 했다.
+
+## Feeling
+
+- 2진수를 써서 combination을 구현하는 것을 보고 어떻게 생각을 해냈는지 정말 신기했다. 역시 난놈들이 참 많다고 생각이 든다.
+- enum으로 case 같은 것을 짜보려고 했지만 이상한 느낌이 들어서 중간에 그만두었다. 이렇게 짤 수는 있지만 굳이 짤 필요가 없었다. 시간 낭비 안 해서 다행이다. enum 이놈!
+
+## Findings
+
+- controller에서 ui와 domain을 연결을 시켜주는데 이때 ui와 domain이 정확하게 무엇을 하는지의 메서드를 표시해 주는 게 아니라 controller이 메시지를 보내는 것이다. 그리고 결과도 그냥 메시지로 받아서 그 메시지로 받아서 다른 곳에 다시 뿌리는 역할을 하는 것이다. 정수 배열은 [I String 배열은 [L , 이중 혹은 이상은 [ 가 앞에 더 찍힌다.
+- 배열을 콘솔로 찍어 보고 싶을 때는 toStrings를 쓰고 이중 혹은 그 이상의 배열을 콘솔로 찍어 보고 싶을 때는 deepToStrings를 쓰면 된다
+- proxy는 실제 서비스를 사용해서 그 위에서 새로운 성격을 추가한다. 이것으로 사용자가 원하는 성격을 띤 인터페이스가 같은 서비스를 쓸 수 있다. 예를 들어서 서비스를 실행하기 전/후에 실행해야 할 코드가 있을 시에 서비스를 실행하기 전에 프락시의 코드를 거쳐서 가게끔 만든다. proxy를 쓰는 이유가 꾀 된다. 하나는 lazy installation이라고 무거운 서비스를 당장 필요 없을 시에 나중에 필요할 때 실행한다. 하나는 access control이다. 특정 유저만 이 서비스를 사용할 수 있게끔 만들 수 있다. 하나는 request에 대한 logging을 하고 싶을 때 proxy를 써서 서버를 감싸서 거기에 데가 logging 구현을 하면 된다. 그리고 caching request result도 있다. request에 대한 result를 caching을 해서 사용자가 같은 request를 하면 cache에 저장된 result를 주는 기능을 구현하기도 한다. 
+
+## Future action
+
+- 이진수로 combination을 짜는 것을 보고 놀랐다. 역시 수학의 중요성을 느꼈는데 정말 시간이 나면 수학 공부 좀 해봐야겠다.
+- 오늘 프로젝트의 피드백을 받아 봤는데 역시 피드백을 받으니깐 문제들이 속속히 보였다. 다음에도 피드백을 자주 받도록 하자.
 
 ## Feedback
