--- a/content/til/2020-06-16-TIL.md
+++ b/content/til/2020-06-16-TIL.md
@@ -16,10 +16,12 @@ description: ''
 그 넣는 작업으로 인하여 3줄이나 더 썼다. JavaScript는 그냥 push하면 끝일텐데... 여윽시 JavaScript.
 그리고 마지막으로 코드를 제출했었는데 시간 초과가 떴었다. 그래서 포맷 정렬등을 하니깐 통과가 되었다.  
 물어보니 jvm compile할때 문제가 생겨서 error이 떴을 수도 있다고 했다. 아무튼 들여쓰기 하나 없애니깐 통과가 됬다. 
+- 문익점 2주차 1번 스텝 완료 했다.
 
 ## Feelings
 
-- 
+- 정규식 너무 어렵다.
+
 ## Findings
 
 -  priority queue에 내장 함수에 poll이랑 peek와 add를 쓸 수 있었다.
@@ -74,4 +76,4 @@ $21 ==> null
 
 ## Future Action
 
-- 
+- 정규식 너무 어려운데 그래도 효용성이 좋아서 공부 많이 하고 자주 쓰도록 하자.
