--- a/content/til/2020-06-17-TIL.md
+++ b/content/til/2020-06-17-TIL.md
@@ -1,16 +1,14 @@
 ---
 layout: TIL
-title: "2020-06-16-TIL"
+title: "2020-06-17-TIL"
 template: "til"
-date: "2020-06-16"
+date: "2020-06-17"
 description: ''
 ---
 
 ## Fact
 
-- 오늘은 프로그래머스 레밸 2 짜리 3문제를 풀었다. 올바른 괄호, 다음 큰 숫자, 주식가격. javaScript로 올바른 괄호, 다음 큰 숫자를 풀고 나머지는 java로 풀었다. 셋 다 레벨 2에서 쉬운 측에 들어서 그런지 무난하게 풀었다.
-- 문제 푼 후에 어제 만들다가 만 문익점 1단계 계산기를 마무리 짓고 리팩토링을 했따. 
-- 그 후에 TDD로 자동차 경주게임 구현 동영상을 보면서 TDD를 하는 방법을 봤다.
+- 오늘은 프로그래머스 레밸 2 짜리 3문제를 풀었다. 올바른 괄호, 다음 큰 숫자, 주식가격. javaScript로 올바른 괄호, 다음 큰 숫자를 풀고 나머지는 java로 풀었다. 셋 다 레벨 25 TDD로 자동차 경주게임 구현 동영상을 보면서 TDD를 하는 방법을 봤다.
 
 ## Feelings
 
