Add aditional Findings content
Findings about wrapping primitive type and first class collection

--- a/content/til/2020-06-30-TIL.md
+++ b/content/til/2020-06-30-TIL.md
@@ -18,6 +18,13 @@ description:
 
 - parseInt를 쓰면 소숫점을 쉽게 지울수 있다.
 - padStart를 쓰면 기준에 따라 공백이 있으면 다른것으로 채울 수 있다.
+- 원시 타입을 포장해야 하는 이유
+    1. 자신의 상태를 객체 스스로 관리할 수 있다
+    2. 코드의 유지보수에 도움이 된다.
+    3. 자료형에 구애받지 않는다.
+- 일급 컬렉션 (First Class Collection)의 소개와 써야할 이유
+    1. 상태과 로직을 따로 관리
+    2. 불변성을 보장
 
 ## Future Action
 
