--- a/content/til/2020-06-30-TIL.md
+++ b/content/til/2020-06-30-TIL.md
@@ -25,6 +25,8 @@ description:
 - 일급 컬렉션 (First Class Collection)의 소개와 써야할 이유
     1. 상태과 로직을 따로 관리
     2. 불변성을 보장
+- entity는 보통 dblayer와 통신 하는것
+- dto는 req, res 하는 view layer와 통신하는것
 
 ## Future Action
 
