--- a/content/til/2020-07-28-TIL.md
+++ b/content/til/2020-07-28-TIL.md
@@ -6,6 +6,9 @@ date: "2020-07-28"
 description: 
 ---
 
+# d02_학습정리
+
+## ssh 연결하기
 - 네트워크 확인 하기 위해서 하는 작업
   - 핑 때려 보기 ping 8.8.8.8
   - dns 확인 ns lookup dns.google.com
@@ -39,7 +42,7 @@ description:
   - 하나 만들어서 호스트ip를 클라이언트에서 입력할 주소를 입력, 호스트 포트를 클라이언트에서 입력할 포트, 게스트ip 를 서버에서 받을 ip 로 적고 게스트 포트를 서버에서 받을 포트를 설정한다.
   - 자료 <https://lamanus.kr/59>
 
-- directory 명령어들
+## directory 명령어들
   - List Directory, 디렉토리의 내용을 보기
     - ls -l
     - ls -al
@@ -78,6 +81,7 @@ drwxrwxr-x  2 user user_group 4096 Sep 17 06:39 dir1
 
 9번째 블록은 이름
 
+### chmod chown
 - chmod 는 file의 권한 설정을 변경 할 수 있다.
   - chmod 명령어 상세 정리글 
     - <https://ko.wikipedia.org/wiki/Chmod>
@@ -105,6 +109,9 @@ drwxrwxr-x  2 user user_group 4096 Sep 17 06:39 dir1
     - anyarrayname+=anyfiledirectory
   - 모두 출력
     - anyarrayname[@]
+
+
+## shell
 
 shell이란 command-line interpreter, process the commands you run.  
 A shell is a program that interprets and executes the commands entered in the command-line interface.  
@@ -154,13 +161,50 @@ Korn 셸은 다른 셸의 특징을 포함하며, 다음과 같은 최신 스크
 
 4. zsh는 인터랙티브하도록 설계되었으며 bash, tcsh, ksh 등 다른 유닉스/GNU 리눅스 셸의 많은 기능을 통합했다.
 
-강력한 스크립팅 언어다. 다음과 같은 몇 가지 독특한 특징을 가지고 있다.
+다음과 같은 몇 가지 독특한 특징을 가지고 있다.
 
 - 파일 이름 생성
 - 시작 파일
 - 로그인/로그아웃 감시
 - 마감 코멘트
 - 개념지수
-- 변수지수
+ -변수지수
 - 함수지수
 - 주요 색인 및 맨 페이지에서 확인할 수 있는 기타 정보
+
+
+## linux 역사
+
+1977년 Bourne shell이 소개되었다. V7 UNIX용 AT&T Bell Labs의 Stephen Bourne이 쓴 Bourne shell(sh)은 오늘날에도 유용한 쉘로 남아 있다(일부 경우 기본 루트 쉘로서). Bourne shell은 ALGOL68 컴파일러를 작업한 후 개발되었기 때문에 다른 셸보다 알고리즘 언어(ALGOL)의 라인을 따라 문법이 더 잘 되어 있다. 소스 코드는 C에서 개발되었다.
+
+Bourne shell은 두 가지 주요 목표를 달성했다.
+
+운영 체제에 대한 UNIX/리눅스 명령 실행, 즉 명령줄 인터프리터
+셸을 통해 호출할 수 있는 재사용 가능한 스크립트 쓰기, 즉 스크립팅
+톰슨 셸을 교체하는 것 외에도, Bourne shell은 대본에 대한 제어 흐름, 루프, 변수 등과 같은 이전 버전보다 많은 다른 이점을 제공함으로써 운영 체제와 상호 작용하기 위한 보다 기능적인 언어를 제공했다.
+
+셸은 또한 셸 스크립트를 필터로 사용할 수 있도록 해 주었으며, 신호 처리를 위한 통합 지원을 제공했지만 기능을 정의하는 기능이 부족했다.
+
+그것은 스크립트 안에 보존된 문자열 리터럴을 포함시키기 위해 명령 대체와 HERE 문서와 같이 오늘날 우리가 사용하는 많은 기능들을 세계에 소개했다.
+
+Bourne shell은 오늘날 우리가 사용하는 많은 쉘의 개발로 이어졌다.
+
+## unix 역사
+
+UNIX OS는 1960년대 후반에 태어났다. AT&T 벨랩스는 C로 작성된 유닉스라는 운영체제를 출시해 보다 빠른 수정과 수용, 휴대성이 가능하다.
+
+벨 연구소의 켄 톰프슨 주도로 1인 프로젝트로 시작되었다. 그것은 계속해서 가장 널리 사용되는 운영체제가 되었다. 유닉스는 독점 운영 체제다.
+
+Unix OS는 CLI(Command Line Interface)에서 작동하지만, 최근에는 Unix 시스템에서 GUI를 위한 개발이 진행되고 있다. 유닉스는 기업, 대학 대기업 등에서 인기 있는 OS다.
+
+
+## linux unix 차이점
+
+리눅스 소스 코드는 일반 대중이 사용할 수 있는 반면, 유닉스에서는 소스 코드가 독점적이다.  
+UNIX OS는 1960년대 후반 AT&T 벨랩스에서 만들어진 반면 리눅스는 1991년 헬싱키 대학의 라이너스 토발즈가 구축한 운영체제다.  
+리눅스는 유닉스의 복제품이다.  
+리눅스 기본 셸은 BASH이고 유닉스 셸은 Bourne 셸이다.  
+리눅스 위협 탐지 및 솔루션은 매우 빠른 반면 유닉스 사용자는 적절한 버그 수정 패치를 얻기 위해 더 긴 대기 시간을 필요로 한다.  
+리눅스의 중요한 버전은 Redhat, Ubuntu, OpenSuse, Solaris인 반면, 유닉스의 중요한 버전은 HP-UX, AIS, BSD 등이다.  
+
+<https://www.guru99.com/difference-unix-vs-linux.html>
