--- a/content/til/2020-08-03-TIL.md
+++ b/content/til/2020-08-03-TIL.md
@@ -19,12 +19,9 @@ description:
 ### 클래스와 오브젝트, 인스턴스
 
 - 클래스는 객체의 구조, 속성 및 행위를 정의한다.
-- 클래스를 집 설계도라고 생각했을때
-  - 설계도(클래스)로 만들 수 있는것을 찍어 낼 수있다.
-- 오브젝트는 클래스로 부터 만든 고유 속성과 행위를 가지고 있는 것.
-  - 위에 설계도로 찍어 내는 게 집이라고 치면 집이 오브젝트다.
-- 클래스로 부터 만든 특정한 오브젝트를 인스턴스라고 한다.
-  - 예를들어서 1번 집... 2번집... 등...
+- 사람들은 무심코 승용차, 버스, 트럭들을 보고 '차'라고 분류를 한다. 이 분류 한 것을 type이라고 한다.
+- 이 type을 instance화 한게 객체이다. 위의 예를 들어 보자면 승용차, 버스, 트럭이 객체이다.
+- class는 이 객체를 표현 할때 쓸 수 있는 도구이다.
 
 ### 객체 상속과 다향성
 
