Add more context

--- a/content/til/2020-08-04-TIL.md
+++ b/content/til/2020-08-04-TIL.md
@@ -16,22 +16,81 @@ description:
 
 ## Findings
 
-### 불변성 Immutable
+### 함수형 프로그래밍
 
-- 객체가 생성된 이후 그 상태를 변경할 수 없는 디자인 패턴을 의미한다. Immutability은 함수형 프로그래밍의 핵심 원리이다.
+- 함수가 1급 객체이다.
+  - 함수를 변수처럼 사용이 가능하다.
+  - 함수를 조합해서 새로운 함수를 만들어도 된다.
+  - 함수 체이닝을 해서 복잡한 함수를 만들 수 있다.
+  - 모든게 함수 위주로 돌아 간다.
+- 불변성과 순수 함수가 보장이 되어야 한다.
 
-- 객체는 참조(reference) 형태로 전달하고 전달 받는다. 객체가 참조를 통해 공유되어 있다면 그 상태가 언제든지 변경될 수 있기 때문에 문제가 될 가능성도 커지게 된다. 이는 객체의 참조를 가지고 있는 어떤 장소에서 객체를 변경하면 참조를 공유하는 모든 장소에서 그 영향을 받기 때문인데 이것이 의도한 동작이 아니라면 참조를 가지고 있는 다른 장소에 변경 사실을 통지하고 대처하는 추가 대응이 필요하다.
+[출처](https://levelup.gitconnected.com/understanding-functional-programming-in-javascript-a-complete-guide-e85ed13b42c8)
 
-의도하지 않은 객체의 변경이 발생하는 원인의 대다수는 “레퍼런스를 참조한 다른 객체에서 객체를 변경”하기 때문이다. 이 문제의 해결 방법은 비용은 조금 들지만 객체를 불변객체로 만들어 프로퍼티의 변경을 방지하며 객체의 변경이 필요한 경우에는 참조가 아닌 객체의 방어적 복사(defensive copy)를 통해 새로운 객체를 생성한 후 변경한다.
-- 
+#### 불변성 Immutable
+
+- 불변 데이터는 일단 생성되면 변경할 수 없다.
+- 훨씬 더 쉬운 애플리케이션 개발로 이어진다.
+- 방어적 복사를 하지 않고, 간단한 논리로 고급 메모화 및 변경 탐지 기술을 가능하게 한다.
+
+#### 순수 함수
+
+- 같은 입력값을 함수에 전달 할때 무조건 같은 결과값이 나와야한다.
+
+- side-effect가 없어야한다. 
+  - side-effect 종류
+    - 입력값 변화
+    - console.log
+    - HTTP 호출 (AJAX/fetch)
+    - filesystem (fs) 수정
+    - DOM 쿼리
+
+[출처](https://www.freecodecamp.org/news/what-is-a-pure-function-in-javascript-acb887375dfe/)
+
+#### 고차 함수
+
+- 고차 함수(Higher order function)는 함수를 인자로 전달받거나 함수를 결과로 반환하는 함수를 말한다. 고차 함수는 인자로 받은 함수를 필요한 시점에 호출하거나 클로저를 생성하여 반환한다. 자바스크립트의 함수는 일급 객체이므로 값처럼 인자로 전달할 수 있으며 반환할 수도 있다.
+
+```javascript
+
+const array1 = [1,2,3,4,5];
+const array2 = [1,2,3,4,5];
+const array3 = [1,2,3,4,4];
+
+// using every 
+console.log(array1.every((value, index)=> value === array2[index]));// true
+
+console.log(array1.every((value, index)=> value === array3[index]));// false
+
+// using some
+console.log(array1.some((value, index)=> value === array2[index]));// true
+
+console.log(array1.some((value, index)=> value === array3[index]));// true
+
+// using forEach
+array1.forEach(x=> console.log(x)); // 1 2 3 4 5
+
+```
+
+#### 객체지향 vs 함수형
+
+|| 함수형 | 객체지향|
+| -- | -- | -- |
+|중점|Functional programming emphasizes an evaluation of functions| Object-oriented programming based on a concept of objects|
+|데이터| 불변 데이터| 변화 가능 데이터|
+|모델| 선언형 모델 | 명령형 모델|
+|반복| recursive | loop|
+|기본 요소 | 변수/함수 | 객체/메소드|
+
+함수형은 operator이 많을때 쓰고 객체지향은 operator 보다 속성이 더 많을때 쓴다...?
+
+함수형 프로그래밍은 효율성, lazy evaluation, nested function, 버그 없는 코드, 병렬 프로그래밍과 같은 장점을 제공한다. 그리고 고차함수, 불변성, 순수함수 등의 개념들을 가지고 있고 그 외 에도 Strict and Non-strict Evaluation, Type systems, Referential Transparency 개념들을 내포하고 있다.
+
+객체 지향 주요 기능은 추상화, 상속, 다형성, 캡슐화 이다.
 
 
-### 함수가 참조 투명성을 지키고, 부작용을 줄일 수 있도록 구현할 수 있다.
-
-### 순수함수 Pure Function 으로 구현할 수 있다.
-
-### closure 란 
+[출처](https://www.educba.com/functional-programming-vs-oop/)
 
 ## Future Action
 
-- 
+- 개념들이 너무 햇갈린다. 인터넷 자료들이 확실하다고 말 할 수 없으니 책이나 사서 보자.
