--- a/content/til/2020-08-13-TIL.md
+++ b/content/til/2020-08-13-TIL.md
@@ -1,1 +1,97 @@
-졸립다
+---
+layout: TIL
+title: "2020-08-13-TIL"
+template: "til"
+date: "2020-08-13"
+description: 
+---
+
+## Fact
+
+- 13일차
+
+## Feelings
+
+- 오늘은 그래도 어제보단 쉬웠다!!!
+
+## Findings
+
+- DQL(질의어), DML(데이터조작어), DDL(데이터정의어), TCL(트랜잭션처리어), DCL(데이터제어어)가 있습니다.
+
+DQL (질의어)
+
+ - SELECT : 테이블에 저장된 데이터를 조회하는 데 사용되는 가장 기본적인 문법이고 가장 많이 사용됨
+
+DML (데이터 조작어) 
+
+ 데이터를 삽입, 변경 삭제 즉 조작하는 역할을 하는 명령어 INSERT, UPDATE, DELETE
+- INSERT : 새로운 데이터를 삽입함
+- UPDATE : 기존의 데이터를 변경함
+- DELETE : 기존의 데이터를 삭제함
+
+DDL (데이터정의어)
+
+데이터베이스 객체들을 생성, 변경, 제거시 사용 CREATE, ALTER, DROP, RENAME, TRUNCATE
+- CREATE : 새로운 테이블을 생성함
+- ALTER : 기존의 테이블을 변경함 (컬럼을 추가하거나 변경)
+- RENAME : 테이블의 이름을 변경함
+- TRUNCATE : 테이블을 잘라냄(테이블 내의 저장된 내용 삭제)
+- DROP : 기존의 테이블을 삭제함 (테이블의 구조 자체를 제거)
+
+```bash
+CREATE TABLE `user_log` ( `nickname` varchar(64),    `money` dec(10, 2),     `last_visit` datetime);
+```
+
+다 따옴표가 아니라 빽틱
+
+## sql 명령어 
+
+2020-07-16 자 til 참고
+
+## SQL JOIN 방식
+
+### join 
+- 다른 두 테이블의 필드를 조합함.
+- 종류: 이너조인, 아우터조인, 크로스조인, 셀프조인 
+
+![](https://t1.daumcdn.net/cfile/tistory/99D8503D5CEA4CBC11)
+
+#### 이너조인
+
+- 서로 다른 테이블의 같은 필드에 같은 값의 토대로 서로 다른 테이블의 지정 필드들을 연결 시켜주는 구조.
+![](https://t1.daumcdn.net/cfile/tistory/99318F3D5CEA66CC37)
+#### 아우터조인
+
+- 세 종류 left outer join 과 right outer join
+  - left는 첫번째 기준으로 이너 조인으로 하는데 서로 두 필드가 같은 값이 없더라도 왼쪽 테이블것을 출력 해준다.
+  - right는 그 반대
+  - full은 다 보여주는것
+  
+left
+![](https://t1.daumcdn.net/cfile/tistory/9977F73B5CEA689D04)
+
+right
+![](https://t1.daumcdn.net/cfile/tistory/99744F4D5CEA6B2819)
+
+full
+![](https://t1.daumcdn.net/cfile/tistory/99C7D64B5CEA6B3C13)
+
+
+#### cross join
+
+- 특징 없이 두 테이블 간의 가능한 모든 경우의 수의 결합  
+![](https://t1.daumcdn.net/cfile/tistory/998CE94E5CEA6C650E)
+
+#### self join
+
+- 자기자신에 원하는 정보를 결합하는 것
+
+![](https://t1.daumcdn.net/cfile/tistory/9997AF475CEA713605)
+
+
+## Future Action
+
+-
+
+
+
