--- a/content/til/2020-08-18-TIL.md
+++ b/content/til/2020-08-18-TIL.md
@@ -5,3 +5,90 @@ template: "til"
 date: "2020-08-18"
 description: 
 ---
+
+## Fact
+
+- 15일차
+
+## Feeling
+
+- ㅋㅋ
+
+## Findings
+
+### 4계층
+
+- 4계층 부터는 전달할/전달된 데이터에 대한 처리 역활이 있다.
+  - 예를 들자면 에러 복구
+  - 흐름제어로 오버플로를 막아주는것.
+- 애플리케이션 식별로 어느 포트로 전달할지 결정.
+
+- (4 계층)트랜스포트층의 프로토콜 TCP(Transmission Control Protocol), UDP(User Datagram Protocol)
+
+- 애플리케이션 간의 송수신을 하는 경로를 커넥션이라고 한다.
+
+- 3계층에서의 경로와 4계층에서 경로가 다르다
+  - 4계층에서 만드는 경로는 가상적인 통신로이다.
+  - 3계층은 이러저러한 이유로 데이터를 확실하게 주고 받는것을 보장 하자 않는다
+  - 4계층에서는 데이터를 전송을 시작하기 전에 미리 확인을 주고 받아 둔다. 이것을 커넥션 확립이라고 한다.
+
+#### 커넥션
+
+- 커넥션 확립하면 가상 통로를 만들어서 송수신 측이 데이터 보내기/받기 가 준비가 되어 있다고 보장이 된다.
+
+- 커넥션은 상대가 뎅터 전송을 허가 해줘야 해서 통신로를 확보하기 위해 상대에게(수신처) 데이터 전송의 허가 요청을 보낸다. 요청받은(수신처)에서 그것에 대한 허가를 송신처에게 알린다. 이것으로 상대에게 바르게 전달된 것을 확인할 수 있다. 마지막으로 수신처 측이 송신처에게 데이터 전송 허가 요청을 보낸다. 이로써 통로가 확보 되고 커넥션이 확립된것이다. 이것을 **쓰리웨이 핸드쉐이크** 라고 불린다.
+
+![](https://t1.daumcdn.net/cfile/tistory/99087C405C18E3CD28)
+
+
+tcp 헤더
+![](https://www.gatevidyalay.com/wp-content/uploads/2018/09/TCP-Header-Format.png)
+
+ack 상대의 통신응답인 것을 나타낸다.
+syn 상대에 대한 접속요청인것을 나타낸다
+fin 접속을 종료하는 것을 나타낸다.
+
+
+#### 세그먼트 분할
+
+tcp는 애플리케이션으로 부터 받은 데이터를 복수의 세그먼트로 분할 캡슐화 한다. 세그먼트로 캡슐화 할때 알맞은 세그먼트 번호를 (선두에)부여 한다. 이것을 시퀀스 번호라고 한다.
+
+#### 에러 복구
+
+위 세그먼트를 보낼때 시퀀스 번호가 왔는지 안왔는지로 판별하면서 에러 복구를 한다.
+
+수신측에서 받은 시퀀스 번호와 다음 받을 세그먼트의 시퀀스 번호를 송신측에 보냄으로써 원활한 흐름제어를 완성한다.
+
+![](https://lh3.googleusercontent.com/proxy/tshbokk3_nuz8QkPkBbVtnIcQc66qfcrZGVK6WL01961D3bvU4essBmUO2Lzxk3EZqFnmnCbfDeLGCH1JB56eY9EATxJhaDdXr0X-5URvW2QXPE-_9r3UfT1L8Vm-1cS7xzfen980Ab0itd9Lrgy4jpIYdiqd2U)
+
+에러가 발생했는데 상대방에게 도달하지 않았거나 확인응답을 받지 못할 경우에 제전송을 한다.
+
+이때 기달리는데 기달리는것은 RTT값으로 판단한다. (예 3초 기달렸다가 다시 보내기...)
+
+![](https://blog.kakaocdn.net/dn/br0rPK/btqENY9ZUDW/7yhqOnKPSKP6LdOa5Qola0/img.png)
+
+
+#### 버퍼, 다중 전송
+
+- 효율 좋은 통신을 하기 위해서 복수의 세그먼트 전송을 할 수 있다
+
+- 이것을 하기 위해선 버퍼라는게 생긴다.
+
+- 요청을 받으면 확인 응답 처리를 하기 전까지 버퍼에다가 저장 해놨다가 다 하면 응답을 보내준다.
+
+- 이때 송신자 측은 수신자 측의 버퍼 크기를 알고 있어야 된다.
+
+- 그래서 상대방이 확실하게 수신할수 있는 용량의 데이터만 송수신한다. 이것을**윈도우 제어** 라고 한다.
+
+![](https://img1.daumcdn.net/thumb/R800x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F1857AA454D13076328)
+<!-- - 
+TCP와 UDP 프로토콜 차이점에 대해 학습하고 정리한다.
+
+DNS 조회 방식에 대해 학습하고 정리한다.
+
+IP주소 대신에 DNS를 사용하는 이유가 무엇일까 학습하고 정리한다.
+
+다같이 확인할 사항
+도메인 네임과 DNS 서버 구조에 대해 학습하고 정리한다. 
+
+-->
