--- a/content/til/2020-08-25-TIL.md
+++ b/content/til/2020-08-25-TIL.md
@@ -19,8 +19,13 @@ description:
 
 ## Findings
 
-동적계획법의 핵심은 큰 문제를 잘게 나눠서 푸는게 핵심이다. 
+- 동적계획법의 핵심은 큰 문제를 잘게 나눠서 푸는게 핵심이다. 
 
+### 메모이제이션
+
+- 동적계획법 알고리즘의 중 하나는 이항 계수 계산법이다.
+
+출처: https://coding-all.tistory.com/2 [all about coding]
 ![](https://t1.daumcdn.net/cfile/tistory/2305984555140F6329)
 일반 재귀
 
