--- a/content/til/2020-09-18-TIL.md
+++ b/content/til/2020-09-18-TIL.md
@@ -50,14 +50,19 @@ request(app)
 
 sudo apt-get install mysql-server  
 sudo ufw allow mysql   
-<!-- 만약 iptable이 실행되고 있다면 외부에서 접속할 수 있도록 mysql 포트(3306)를 열어줘야 합니다. -->  
+외부에서 접속할 수 있도록 mysql 포트(3306)를 열어줘야 합니다.  
+
 sudo systemctl start mysql  
+
 sudo systemctl enable mysql  
-<!-- Ubuntu 서버가 재시작 되더라도 mysql이 자동 시작되도록 등록합니다. -->
+Ubuntu 서버가 재시작 되더라도 mysql이 자동 시작되도록 등록합니다.
+
 sudo /usr/bin/mysql -u root -p
-<!-- sql 접속 -->
+sql 접속
+
 ALTER USER 'root'@'localhost' IDENTIFIED BY 'boostpassword';
-<!-- 비번 수정 -->
+비번 수정
+
 CREATE USER 'boostuser'@'localhost' IDENTIFIED BY 'boostpassword';
 유저 추가  
 
